# yara_server

./: Cargo.toml  README.md
config/: config.yaml
rules/: hello.yar  world.yar
src/: compress.rs  config.rs  dto.rs  http.rs  main.rs  yara.rs
