[package]
name = "yara_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0.140"
yara-x = "0.15.0"
zip = "4.0.0"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
config = "0.15.11"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"





